# neptune

./: .gitignore  =2.0  HEURISTICS.md  RC_CHECKLIST.md  README.md  RELEASING.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: publish-pypi.yml
.plans/: Neptune AIS Package Plan v3.md
benchmarks/: baseline.json  bench_core.py
examples/: 01_source_discovery.ipynb  01_source_discovery.py  02_archival_ingest.ipynb  02_archival_ingest.py  03_multi_source_fusion.ipynb  03_multi_source_fusion.py  04_event_detection.ipynb  04_event_detection.py  05_streaming_pipeline.ipynb  05_streaming_pipeline.py  06_external_plugin.py  07_fishing_intelligence.ipynb  08_spatial_visualization.ipynb  README.md
neptune_ais/: __init__.py  api.py  catalog.py  fusion.py  helpers.py  qc.py  sinks.py  sql.py  storage.py  stream.py  viz.py
neptune_ais/adapters/: __init__.py  aishub.py  aisstream.py  base.py  dma.py  finland.py  gfw.py  noaa.py  norway.py  registry.py
neptune_ais/cli/: __init__.py  commands_download.py  commands_export.py  commands_inventory.py  commands_map.py  commands_qc.py  commands_sql.py  main.py
neptune_ais/datasets/: __init__.py  events.py  fishing_effort.py  positions.py  tracks.py  vessels.py
neptune_ais/derive/: __init__.py  density.py  events.py  tracks.py
neptune_ais/geometry/: __init__.py  boundaries.py  bridges.py
tests/: test_adapter_certification.py  test_aishub_adapter.py  test_aisstream.py  test_boundaries.py  test_dma_adapter.py  test_e2e_archival.py  test_eez_crossings.py  test_encounters.py  test_events_api.py  test_events_schema.py  test_finland_adapter.py  test_fusion.py  test_gfw_adapter.py  test_helpers.py  test_loitering_and_density.py  test_packaging.py  test_phase4_acceptance.py  test_plugin_registry.py  test_port_calls.py  test_reproducibility.py  test_sinks.py  test_stream.py  test_streaming_soak.py  test_tracks_and_map.py  test_viz.py
