[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neptune-ais"
version = "0.1.0dev0"
description = "Open AIS data platform for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

# ---------------------------------------------------------------------------
# Core dependencies — required for archival ingest and catalog.
# These are paid by every install. Keep this list lean.
# SQL queries require [sql], Parquet write features require [parquet].
# ---------------------------------------------------------------------------
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

# ---------------------------------------------------------------------------
# Optional dependency groups ("extras").
#
# Install with:  pip install neptune-ais[sql]
#                pip install neptune-ais[geo]
#                pip install neptune-ais[stream]
#                pip install neptune-ais[all]
#
# Each group maps to specific subsystems — see the subsystem boundary docs
# in each __init__.py for which modules are allowed to import these.
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# SQL query engine — used by api.py (Neptune.sql, Neptune.duckdb) and
# DuckDBSink for streaming landing.
# Required for: SQL queries over cataloged data, DuckDB landing sink.
sql = [
    "duckdb>=1.0",
]

# Parquet I/O — pyarrow backend for Polars Parquet read/write.
# Required for: reading/writing Parquet files (archival ingest, sinks,
# promotion). Polars can use its own engine for basic reads, but pyarrow
# is needed for full write options (compression, statistics, row groups).
parquet = [
    "pyarrow>=14.0",
]

# Geometry & visualization — used by geometry/ and viz/ subsystems.
# Required for: GeoDataFrame/MovingPandas bridges, EEZ/port boundary
# lookups, spatial indexing, and interactive map rendering.
geo = [
    "shapely>=2.0",
    "geopandas>=1.0",
    "movingpandas>=0.18",
    "lonboard>=0.9",
    "h3>=4.0",
]

# Streaming — used by stream.py and streaming-capable adapters.
# Required for: real-time AIS feeds via WebSocket (e.g. AISStream).
stream = [
    "websockets>=12.0",
]

# CLI — used by cli/ subsystem.
# Required for: the `neptune` console script.
cli = [
    "click>=8.1",
    "rich>=13.0",
]

# Development and testing.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "coverage>=7.4",
]

# Convenient bundle: everything needed for full-featured Neptune.
all = [
    "neptune-ais[sql,parquet,geo,stream,cli]",
]

[project.scripts]
neptune = "neptune_ais.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["neptune_ais"]
